--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
@@ -198,7 +198,7 @@ components:
         channelCode:
           type: string
           default: 'WEBSHOP'
-          example: 'MOBILE_APP'
+          example: MOBILE_APP
           nullable: false
         code:
           type: integer
@@ -392,7 +392,7 @@ components:
           type: string
           format: time
           nullable: false
-          example: '12:07'
+          example: 12:07
         localDate:
           type: string
           format: date
@@ -533,7 +533,7 @@ components:
           default: 'CHF'
           minLength: 3
           maxLength: 3
-          example: 'CHF'
+          example: CHF
           nullable: false
 
     # com.anaptecs.jeaf.junit.openapi.base.OpenAPITestObject
@@ -1237,7 +1237,7 @@ components:
         link:
           type: string
           nullable: false
-          example: 'https://www.company.com/products/1345-345'
+          example: https://www.company.com/products/1345-345
         productID:
           type: string
           nullable: false
@@ -1251,7 +1251,7 @@ components:
             default: 'CHF'
             minLength: 3
             maxLength: 3
-            example: 'CHF'
+            example: CHF
           minItems: 7
           maxItems: 42
           nullable: false
