--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -101,7 +101,7 @@ paths:
             application/json:
               schema:
                 type: boolean
-                example: 'true'
+                example: true
           headers:
             X-Global-Response-Header:
               schema:
@@ -136,7 +136,7 @@ paths:
             type: string
             minLength: 1
             default: 4711
-            example: '1234-345'
+            example: 1234-345
       responses:
         '200':
           description: >-
@@ -172,7 +172,7 @@ paths:
           required: true
           schema:
             type: string
-            example: 'en'
+            example: en
         - name: reseller
           in: cookie
           required: true
@@ -217,11 +217,11 @@ paths:
           application/json:
             schema:
               type: string
-              example: 'MOBILE_APP'
+              example: MOBILE_APP
           application/xml:
             schema:
               type: string
-              example: 'MOBILE_APP'
+              example: MOBILE_APP
       responses:
         '200':
           description: >-
@@ -231,13 +231,13 @@ paths:
               schema:
                 type: string
                 default: 'WEBSHOP'
-                example: 'MOBILE_APP'
+                example: MOBILE_APP
                 nullable: false
             application/xml:
               schema:
                 type: string
                 default: 'WEBSHOP'
-                example: 'MOBILE_APP'
+                example: MOBILE_APP
                 nullable: false
           headers:
             X-Global-Response-Header:
@@ -285,7 +285,7 @@ paths:
           required: true
           schema:
             type: string
-            example: 'en'
+            example: en
         - name: reseller
           in: cookie
           required: true
@@ -460,7 +460,7 @@ paths:
           required: true
           schema:
             type: string
-            example: 'en'
+            example: en
         - name: reseller
           in: cookie
           required: true
@@ -496,7 +496,7 @@ paths:
             schema:
                 type: string
                 default: 'WEBSHOP'
-                example: 'MOBILE_APP'
+                example: MOBILE_APP
                 nullable: false
       responses:
         '200':
@@ -507,7 +507,7 @@ paths:
               schema:
                 type: string
                 default: 'WEBSHOP'
-                example: 'MOBILE_APP'
+                example: MOBILE_APP
                 nullable: false
           headers:
             X-Global-Response-Header:
@@ -536,10 +536,10 @@ paths:
                   type: string
                   minLength: 3
                   maxLength: 3
-                  example: 'CHF'
+                  example: CHF
                 minItems: 1
                 nullable: false
-                example: '["CHF", "EUR", "USD"]'
+                example: ["CHF", "EUR", "USD"]
       responses:
         '200':
           description: >-
@@ -554,7 +554,7 @@ paths:
                   type: string
                   minLength: 3
                   maxLength: 3
-                  example: 'CHF'
+                  example: CHF
                 minItems: 1
                 nullable: false
           headers:
@@ -583,7 +583,7 @@ paths:
                 default: 'CHF'
                 minLength: 3
                 maxLength: 3
-                example: 'CHF'
+                example: CHF
                 nullable: false
       responses:
         '200':
@@ -598,7 +598,7 @@ paths:
                 default: 'CHF'
                 minLength: 3
                 maxLength: 3
-                example: 'CHF'
+                example: CHF
                 nullable: false
           headers:
             X-Global-Response-Header:
