Added auto generated @Valid annotation

--- a/jeaf-generator-test-open-api-service-objects/pom.xml
+++ b/jeaf-generator-test-open-api-service-objects/pom.xml
@@ -115,6 +115,7 @@
 					<enableSemVerForJSON>false</enableSemVerForJSON>
 					<generateConstantsForAttributeNames>false</generateConstantsForAttributeNames>
 					<generateJSONSerializers>true</generateJSONSerializers>
+					<generateValidAnnotationForClasses>true</generateValidAnnotationForClasses>
 					<generateValidationAnnotationsForAssociationsFromMultiplicity>true</generateValidationAnnotationsForAssociationsFromMultiplicity>
 					<generateValidationAnnotationsForAttributesFromMultiplicity>true</generateValidationAnnotationsForAttributesFromMultiplicity>
 
