--- a/jeaf-generator-maven-plugin/pom.xml
+++ b/jeaf-generator-maven-plugin/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.6.43-SNAPSHOT</version>
+		<version>1.6.43</version>
 	</parent>
 
 	<artifactId>jeaf-generator-maven-plugin</artifactId>
