--- a/jeaf-generator-test-eclipse-papyrus/pom.xml
+++ b/jeaf-generator-test-eclipse-papyrus/pom.xml
@@ -76,6 +76,8 @@
 					<resourceDirectory>${project.basedir}/src-gen/main/resources</resourceDirectory>
 					<resourceGenDirectory>${project.basedir}/src-gen/main/resources</resourceGenDirectory>
 					
+					<umlModellingTool>ECLIPSE_PAPYRUS</umlModellingTool>
+					
 					<!-- Configure behavior concerning existing files in src-gen and res-gen directory. It is strongly recommended to clean directories before generating new files. -->
 					<cleanSourceGen>true</cleanSourceGen>
 					<cleanResourceGen>true</cleanResourceGen>
