Fixed invalid JEAF dependencies in generated code

--- a/jeaf-generator-test-spring/pom.xml
+++ b/jeaf-generator-test-spring/pom.xml
@@ -19,6 +19,12 @@
 		</dependency>
 		
 		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>${jackson.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.anaptecs.jeaf.uml</groupId>
 			<artifactId>jeaf-uml-test-model</artifactId>
 			<version>${jeaf.test.model.version}</version>
@@ -66,6 +72,7 @@
 					<targetRuntime>SPRING</targetRuntime>
 					<generateServiceInterfaces>true</generateServiceInterfaces>
 					<generatePOJOs>true</generatePOJOs>
+					<generateJSONSerializers>true</generateJSONSerializers>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
