--- a/jeaf-generator-test-services-api/pom.xml
+++ b/jeaf-generator-test-services-api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.6.45</version>
+		<version>1.6.46-SNAPSHOT</version>
 	</parent>
 
 	<name>JEAF Generator Test Services API</name>
