--- a/jeaf-generator-test-spring/pom.xml
+++ b/jeaf-generator-test-spring/pom.xml
@@ -19,6 +19,13 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>${javaee-api.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-databind</artifactId>
 		    <version>${jackson.version}</version>
@@ -70,6 +77,7 @@
 
 					<!-- Define what should be generated. By default nothing is generated. -->
 					<targetRuntime>SPRING</targetRuntime>
+					<generateRESTResources>true</generateRESTResources>
 					<generateServiceInterfaces>true</generateServiceInterfaces>
 					<generatePOJOs>true</generatePOJOs>
 					<generateJSONSerializers>true</generateJSONSerializers>
