--- a/jeaf-generator-test-spring/pom.xml
+++ b/jeaf-generator-test-spring/pom.xml
@@ -101,6 +101,7 @@
 					<generateServiceInterfaces>true</generateServiceInterfaces>
 					<generatePOJOs>true</generatePOJOs>
 					<generateJSONSerializers>true</generateJSONSerializers>
+					<generateJacksonAnnotations>true</generateJacksonAnnotations>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
