--- a/pom.xml
+++ b/pom.xml
@@ -25,17 +25,17 @@
 	</scm>
 	
 	<properties>
-		<jeaf.x-fun.api.version>1.6.12</jeaf.x-fun.api.version>
-		<jeaf.x-fun.impl.version>1.6.19</jeaf.x-fun.impl.version>
-		<jeaf.tools.api.version>1.6.15</jeaf.tools.api.version>
-		<jeaf.core.api.version>1.6.15</jeaf.core.api.version>
-		<jeaf.core.impl.version>1.6.17</jeaf.core.impl.version>
-		<jeaf.persistence.api.version>1.6.12</jeaf.persistence.api.version>
-		<jeaf.junit.extensions.version>1.6.12</jeaf.junit.extensions.version>
-		<jeaf.workload.api.version>1.6.14</jeaf.workload.api.version>
-		<jeaf.json.api.version>1.6.8</jeaf.json.api.version>
-		<jeaf.json.impl.version>1.6.9</jeaf.json.impl.version>
-		<jeaf.test.model.version>1.0.37</jeaf.test.model.version>
+		<jeaf.x-fun.api.version>1.6.13</jeaf.x-fun.api.version>
+		<jeaf.x-fun.impl.version>1.6.20</jeaf.x-fun.impl.version>
+		<jeaf.tools.api.version>1.6.16</jeaf.tools.api.version>
+		<jeaf.core.api.version>1.6.16</jeaf.core.api.version>
+		<jeaf.core.impl.version>1.6.18</jeaf.core.impl.version>
+		<jeaf.persistence.api.version>1.6.13</jeaf.persistence.api.version>
+		<jeaf.junit.extensions.version>1.6.13</jeaf.junit.extensions.version>
+		<jeaf.workload.api.version>1.6.15</jeaf.workload.api.version>
+		<jeaf.json.api.version>1.6.9</jeaf.json.api.version>
+		<jeaf.json.impl.version>1.6.10</jeaf.json.impl.version>
+		<jeaf.test.model.version>1.0.38-SNAPSHOT</jeaf.test.model.version>
 	</properties>
 
 	<modules>
