Added simple test for generated REST controller

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,8 @@
 		<jeaf.json.api.version>1.6.9</jeaf.json.api.version>
 		<jeaf.json.impl.version>1.6.10</jeaf.json.impl.version>
 		<jeaf.test.model.version>1.0.38-SNAPSHOT</jeaf.test.model.version>
+		
+		<spring.boot.version>2.6.7</spring.boot.version>
 	</properties>
 
 	<modules>
