Fixed spelling bug in Maven Plugin Parameter

--- a/jeaf-generator-test-eclipse-papyrus/pom.xml
+++ b/jeaf-generator-test-eclipse-papyrus/pom.xml
@@ -76,7 +76,7 @@
 					<resourceDirectory>${project.basedir}/src-gen/main/resources</resourceDirectory>
 					<resourceGenDirectory>${project.basedir}/src-gen/main/resources</resourceGenDirectory>
 					
-					<umlModellingTool>ECLIPSE_PAPYRUS</umlModellingTool>
+					<umlModelingTool>ECLIPSE_PAPYRUS</umlModelingTool>
 					
 					<!-- Configure behavior concerning existing files in src-gen and res-gen directory. It is strongly recommended to clean directories before generating new files. -->
 					<cleanSourceGen>true</cleanSourceGen>
