--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,14 @@
 		<jeaf.persistence.api.version>1.6.13</jeaf.persistence.api.version>
 		<jeaf.junit.extensions.version>1.6.13</jeaf.junit.extensions.version>
 		<jeaf.workload.api.version>1.6.15</jeaf.workload.api.version>
+		<jeaf.workload.impl.version>1.6.14</jeaf.workload.impl.version>
 		<jeaf.json.api.version>1.6.9</jeaf.json.api.version>
 		<jeaf.json.impl.version>1.6.10</jeaf.json.impl.version>
 		<jeaf.test.model.version>1.0.38-SNAPSHOT</jeaf.test.model.version>
 		
+		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
 		<spring.boot.version>2.6.7</spring.boot.version>
+		<spring.core.version>5.3.19</spring.core.version>
 	</properties>
 
 	<modules>
