--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf</groupId>
 		<artifactId>jeaf-plugin-project-parent</artifactId>
-		<version>1.0.28-SNAPSHOT</version>
+		<version>1.0.28</version>
 	</parent>
 
 	<groupId>com.anaptecs.jeaf.generator</groupId>
@@ -36,7 +36,7 @@
 		<jeaf.workload.impl.version>1.6.14</jeaf.workload.impl.version>
 		<jeaf.json.api.version>1.6.9</jeaf.json.api.version>
 		<jeaf.json.impl.version>1.6.10</jeaf.json.impl.version>
-		<jeaf.test.model.version>1.0.38-SNAPSHOT</jeaf.test.model.version>
+		<jeaf.test.model.version>1.0.38</jeaf.test.model.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
 		<spring.boot.version>2.6.7</spring.boot.version>
