--- a/jeaf-generator-test-services-impl/pom.xml
+++ b/jeaf-generator-test-services-impl/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.6.49-SNAPSHOT</version>
+		<version>1.6.49</version>
 	</parent>
 
 	<name>JEAF Generator Test Services Impl</name>
