--- a/jeaf-generator/.classpath
+++ b/jeaf-generator/.classpath
@@ -5,9 +5,13 @@
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="src" path="src-gen/main/java"/>
+	<classpathentry kind="src" path="src/test/java"/>
+	<classpathentry kind="src" path="src/test/resources"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="jeaf-x-fun-api-1.5.23.jar"/>
 	<classpathentry kind="lib" path="jeaf-tools-api-1.5.23.jar"/>
+	<classpathentry kind="lib" path="D:/MavenRepository/org/junit/jupiter/junit-jupiter-api/5.8.2/junit-jupiter-api-5.8.2.jar"/>
+	<classpathentry kind="lib" path="D:/MavenRepository/junit/junit/3.8.1/junit-3.8.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
