--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf</groupId>
 		<artifactId>jeaf-plugin-project-parent</artifactId>
-		<version>1.0.28</version>
+		<version>1.0.29-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.anaptecs.jeaf.generator</groupId>
@@ -34,8 +34,8 @@
 		<jeaf.junit.extensions.version>1.6.13</jeaf.junit.extensions.version>
 		<jeaf.workload.api.version>1.6.15</jeaf.workload.api.version>
 		<jeaf.workload.impl.version>1.6.14</jeaf.workload.impl.version>
-		<jeaf.json.api.version>1.6.9</jeaf.json.api.version>
-		<jeaf.json.impl.version>1.6.10</jeaf.json.impl.version>
+		<jeaf.json.api.version>1.6.10</jeaf.json.api.version>
+		<jeaf.json.impl.version>1.6.11</jeaf.json.impl.version>
 		<jeaf.test.model.version>1.0.38</jeaf.test.model.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
