Added code generation for REST Serivce Proxy config files

--- a/jeaf-generator-test-spring-jersey/pom.xml
+++ b/jeaf-generator-test-spring-jersey/pom.xml
@@ -179,6 +179,9 @@
 					<generatePOJOs>true</generatePOJOs>
 					<generateJSONSerializers>true</generateJSONSerializers>
 					<generateJacksonAnnotations>true</generateJacksonAnnotations>
+					
+					<generateRESTServiceProxies>true</generateRESTServiceProxies>
+					<generateRESTServiceProxyConfigFile>true</generateRESTServiceProxyConfigFile>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
