Fixed bug in configuration value annotations

--- a/jeaf-generator-test-spring-jersey/src/test/resources/config/application-productservice-not-generated.yml
+++ b/jeaf-generator-test-spring-jersey/src/test/resources/config/application-productservice-not-generated.yml
@@ -1,5 +1,5 @@
 # File contains configuration for external REST resource ProductService
-productservice:
+productService:
   # URL to external service
   externalURL: http://localhost:8099
   
