--- a/jeaf-generator-test-spring-jersey/src/test/resources/config/application-restproductservice-not-generated.yml
+++ b/jeaf-generator-test-spring-jersey/src/test/resources/config/application-restproductservice-not-generated.yml
@@ -1,8 +1,7 @@
-
-# File contains configuration for external REST resource RESTProductService
+# File contains configuration for external REST resource ProductService
 rESTProductService:
   # URL to external service
-  externalURL: TODO: Please configure URL of external REST resource
+  externalURL: http://localhost:8099
   
   # Apache HTTP Client configuration
   http:
