--- a/jeaf-generator-test-spring-jersey/src-gen/main/resources/config/application-productservice.yml
+++ b/jeaf-generator-test-spring-jersey/src-gen/main/resources/config/application-productservice.yml
@@ -1,6 +1,6 @@
 
 # File contains configuration for external REST resource ProductService
-ProductService:
+productService:
   # URL to external service
   externalURL: TODO: Please configure URL of external REST resource
   
