--- a/jeaf-generator-test-spring-jersey/src/test/resources/config/application-restproductservice-not-generated.yml
+++ b/jeaf-generator-test-spring-jersey/src/test/resources/config/application-restproductservice-not-generated.yml
@@ -3,6 +3,12 @@ rESTProductService:
   # URL to external service
   externalURL: http://localhost:8099
   
+  # Domain of the cookie that is used in requests.
+  cookieDomain: localhost
+  
+  # Path of the cookie that is used in requests.
+  cookiePath: /
+
   # Apache HTTP Client configuration
   http:
     # Maximum size of the connection pool.
