--- a/jeaf-generator-test-spring-jersey/pom.xml
+++ b/jeaf-generator-test-spring-jersey/pom.xml
@@ -12,7 +12,6 @@
 	<packaging>jar</packaging>
 
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-validation</artifactId>
@@ -25,7 +24,6 @@
 		  <version>${spring.core.version}</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-jersey</artifactId>
@@ -45,6 +43,12 @@
             <scope>test</scope>            
         </dependency>
 
+		<dependency>
+		    <groupId>org.zalando</groupId>
+		    <artifactId>problem-spring-web</artifactId>
+		    <version>0.23.0</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
