--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 		<jeaf.junit.extensions.version>1.6.13</jeaf.junit.extensions.version>
 		<jeaf.workload.api.version>1.6.15</jeaf.workload.api.version>
 		<jeaf.workload.impl.version>1.6.14</jeaf.workload.impl.version>
-		<jeaf.json.api.version>1.6.10</jeaf.json.api.version>
+		<jeaf.json.api.version>1.6.11-SNAPSHOT</jeaf.json.api.version>
 		<jeaf.json.impl.version>1.6.11</jeaf.json.impl.version>
 		<jeaf.test.model.version>1.0.39-SNAPSHOT</jeaf.test.model.version>
 		
