--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 		<jeaf.workload.api.version>1.6.15</jeaf.workload.api.version>
 		<jeaf.workload.impl.version>1.6.14</jeaf.workload.impl.version>
 		<jeaf.json.api.version>1.6.11-SNAPSHOT</jeaf.json.api.version>
-		<jeaf.json.impl.version>1.6.11</jeaf.json.impl.version>
+		<jeaf.json.impl.version>1.6.12-SNAPSHOT</jeaf.json.impl.version>
 		<jeaf.test.model.version>1.0.39-SNAPSHOT</jeaf.test.model.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
