Added first test project for JEAF REST Proxies

--- a/jeaf-generator-test-spring/pom.xml
+++ b/jeaf-generator-test-spring/pom.xml
@@ -120,6 +120,7 @@
 
 					<!-- Define what should be generated. By default nothing is generated. -->
 					<targetRuntime>SPRING</targetRuntime>
+					<restLibrary>SPRING_WEB_MVC</restLibrary>
 					<generateRESTResources>true</generateRESTResources>
 					<generateServiceInterfaces>true</generateServiceInterfaces>
 					<generatePOJOs>true</generatePOJOs>
