JEAF-3001 Implemented JEAF-based REST facade

--- a/pom.xml
+++ b/pom.xml
@@ -25,16 +25,16 @@
 	</scm>
 	
 	<properties>
-		<jeaf.x-fun.api.version>1.6.13</jeaf.x-fun.api.version>
-		<jeaf.x-fun.impl.version>1.6.20</jeaf.x-fun.impl.version>
-		<jeaf.tools.api.version>1.6.16</jeaf.tools.api.version>
+		<jeaf.x-fun.api.version>1.6.14-SNAPSHOT</jeaf.x-fun.api.version>
+		<jeaf.x-fun.impl.version>1.6.21-SNAPSHOT</jeaf.x-fun.impl.version>
+		<jeaf.tools.api.version>1.6.17-SNAPSHOT</jeaf.tools.api.version>
 		<jeaf.core.api.version>1.6.17-SNAPSHOT</jeaf.core.api.version>
 		<jeaf.core.impl.version>1.6.19-SNAPSHOT</jeaf.core.impl.version>
 		<jeaf.persistence.api.version>1.6.13</jeaf.persistence.api.version>
 		<jeaf.junit.extensions.version>1.6.13</jeaf.junit.extensions.version>
-		<jeaf.fastlane.impl.version>1.6.16</jeaf.fastlane.impl.version>
-		<jeaf.workload.api.version>1.6.15</jeaf.workload.api.version>
-		<jeaf.workload.impl.version>1.6.14</jeaf.workload.impl.version>
+		<jeaf.fastlane.impl.version>1.6.17-SNAPSHOT</jeaf.fastlane.impl.version>
+		<jeaf.workload.api.version>1.6.16-SNAPSHOT</jeaf.workload.api.version>
+		<jeaf.workload.impl.version>1.6.15-SNAPSHOT</jeaf.workload.impl.version>
 		<jeaf.json.api.version>1.6.11-SNAPSHOT</jeaf.json.api.version>
 		<jeaf.json.impl.version>1.6.12-SNAPSHOT</jeaf.json.impl.version>
 		<jeaf.test.model.version>1.0.39-SNAPSHOT</jeaf.test.model.version>
