--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf</groupId>
 		<artifactId>jeaf-plugin-project-parent</artifactId>
-		<version>1.0.30-SNAPSHOT</version>
+		<version>1.0.30</version>
 	</parent>
 
 	<groupId>com.anaptecs.jeaf.generator</groupId>
@@ -35,9 +35,9 @@
 		<jeaf.fastlane.impl.version>1.6.16</jeaf.fastlane.impl.version>
 		<jeaf.workload.api.version>1.6.15</jeaf.workload.api.version>
 		<jeaf.workload.impl.version>1.6.14</jeaf.workload.impl.version>
-		<jeaf.json.api.version>1.6.11-SNAPSHOT</jeaf.json.api.version>
-		<jeaf.json.impl.version>1.6.12-SNAPSHOT</jeaf.json.impl.version>
-		<jeaf.test.model.version>1.0.39-SNAPSHOT</jeaf.test.model.version>
+		<jeaf.json.api.version>1.6.11</jeaf.json.api.version>
+		<jeaf.json.impl.version>1.6.12</jeaf.json.impl.version>
+		<jeaf.test.model.version>1.0.39</jeaf.test.model.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
 		<spring.boot.version>2.7.0</spring.boot.version>
