--- a/jeaf-generator-test-custom-extension/pom.xml
+++ b/jeaf-generator-test-custom-extension/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.6.53-SNAPSHOT</version>
+		<version>1.6.53</version>
 	</parent>
 
 	<name>JEAF Generator Test Custom Extension</name>
