Update to latest version of JEAF Maven Plugin

--- a/jeaf-generator-test-message-constants/pom.xml
+++ b/jeaf-generator-test-message-constants/pom.xml
@@ -16,7 +16,7 @@
 			<groupId>com.anaptecs.jeaf.x-fun</groupId>
 			<artifactId>jeaf-x-fun-default-runtime</artifactId>
 			<version>${jeaf.x-fun.impl.version}</version>
-			<scope>test</scope>
+			<scope>runtime</scope>
 			<type>pom</type>
 		</dependency>
 		
