--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 		<jeaf.workload.impl.version>1.6.17-SNAPSHOT</jeaf.workload.impl.version>
 		<jeaf.json.api.version>1.6.14-SNAPSHOT</jeaf.json.api.version>
 		<jeaf.json.impl.version>1.6.15-SNAPSHOT</jeaf.json.impl.version>
-		<jeaf.test.model.version>1.0.39</jeaf.test.model.version>
+		<jeaf.test.model.version>1.0.40-SNAPSHOT</jeaf.test.model.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
 		<spring.boot.version>2.7.0</spring.boot.version>
